--- a/readme.mkd
+++ b/readme.mkd
@@ -7,14 +7,28 @@ My fork of the nice tomate notification icon,
      https://git.gitorious.org/tomate/
 
 
-Changes from the original:
+so that I could toy around with various methods of getting myself to be
+productive.
 
-1. Two icon colors: red for the first 10 minutes, yellow for the next 35 (I
-   work in 45-minute bursts, but the first stage is for the basic self-cheating
-   "ok, I can stop after the 10 minutes if I want to);
 
-2. A sound when the 45 minutes is out (it's actually 44, but I never finish
-   working immediately).
+This app uses a set-skype-status script (included) to put skype to invisible as
+soon as the work starts, and aplay to play the ringing sound.
+
+
+notifications:
+  idle: gray
+  click - turns red, skype turns invisible
+  24 minutes - turns yellow
+  25 minutes - turns green, rings
+
+  theoretically this is time to take a short break.
+  practically, I want to "just finish doing this thing" too often and time
+  stretches into eternity, so the following events happen afterwards, if icon
+  is not clicked and the work stopped:
+
+  49 minutes - turns yellow again
+  50 minutes - triple ring "definitely take a break now", icon turns back to
+               gray, skype put back online
 
 
 Einar Lielmanis, einar@spicausis.lv
